Update build instructions and Bitcoin node endpoints
Replaced 'cargo build-bpf' with 'cargo build-sbf' in documentation to reflect updated build tooling. Updated example Bitcoin node endpoints and credentials to new URLs and passwords. Minor change to arch-logo.svg formatting.

--- a/content/docs/defi-applications/how-to-build-lending-protocol.mdx
+++ b/content/docs/defi-applications/how-to-build-lending-protocol.mdx
@@ -616,7 +616,7 @@ mod tests {
 
 ```bash
 # Build the program
-cargo build-bpf
+cargo build-sbf
 
 # Deploy to local network
 arch-cli program deploy target/deploy/lending_protocol.so
