--- a/content/docs/development/how-to-write-oracle-program.mdx
+++ b/content/docs/development/how-to-write-oracle-program.mdx
@@ -225,7 +225,7 @@ Once you have your oracle program written, you can deploy it to the Arch Network
 
 ```bash
 # Build the program
-cargo build-bpf
+cargo build-sbf
 
 # Deploy the program
 arch-cli program deploy target/deploy/oracle.so
