--- a/content/docs/development/writing-your-first-program.mdx
+++ b/content/docs/development/writing-your-first-program.mdx
@@ -452,7 +452,7 @@ entrypoint!(process_instruction);
 
 ```bash
 # Build the program
-cargo build-bpf
+cargo build-sbf
 
 # Check the build output
 ls -la target/deploy/
