--- a/content/docs/help-resources/faq.mdx
+++ b/content/docs/help-resources/faq.mdx
@@ -83,7 +83,7 @@ You can interact with Bitcoin transactions through:
 
 ### How do I deploy my program to the network?
 
-1. **Build Your Program**: Use `cargo build-bpf` to compile
+1. **Build Your Program**: Use `cargo build-sbf` to compile
 2. **Deploy Locally**: Use `arch-cli deploy` for local testing
 3. **Testnet Deployment**: Deploy to testnet for broader testing
 4. **Mainnet Deployment**: Deploy to mainnet (when available)
