--- a/content/docs/quick-start/quick-start.mdx
+++ b/content/docs/quick-start/quick-start.mdx
@@ -85,9 +85,9 @@ For testnet development with remote Bitcoin node:
 ```bash
 # 1. Create a configuration profile
 arch-cli config create-profile testnet \
-    --bitcoin-node-endpoint http://bitcoin-node.test.aws.archnetwork.xyz:49332 \
+    --bitcoin-node-endpoint http://bitcoin-rpc.test.arch.network:80 \
     --bitcoin-node-username bitcoin \
-    --bitcoin-node-password uU1taFBTUvae96UCtA8YxAepYTFszYvYVSXK8xgzBs0 \
+    --bitcoin-node-password 0F_Ed53o4kR7nxh3xNaSQx-2M3TY16L55mz5y9fjdrk \
     --bitcoin-network testnet \
     --arch-node-url http://localhost:9002
 
@@ -149,7 +149,7 @@ arch-cli orchestrate mine-blocks --num-blocks 1
 
 ```bash
 # Build the example program
-cargo build-bpf
+cargo build-sbf
 
 # Deploy to your local network
 arch-cli deploy target/deploy/
@@ -212,7 +212,7 @@ netstat -an | grep 18443
 ```bash
 # Clean and rebuild
 cargo clean
-cargo build-bpf
+cargo build-sbf
 
 # Check Rust version
 rustc --version  # Should be 1.84.1+
