--- a/content/docs/setup-infrastructure/network-architecture.mdx
+++ b/content/docs/setup-infrastructure/network-architecture.mdx
@@ -380,7 +380,7 @@ arch-cli orchestrate start
 ```bash
 # Configure for testnet
 arch-cli config create-profile testnet \
-    --bitcoin-node-endpoint http://bitcoin-node.test.aws.archnetwork.xyz:49332 \
+    --bitcoin-node-endpoint http://bitcoin-rpc.test.arch.network:80 \
     --bitcoin-network testnet \
     --arch-node-url http://localhost:9002
 ```
