Update internal documentation links for consistency
Standardized internal documentation links to use consistent casing and folder structure (e.g., /docs/Quick-Start/, /docs/Setup-Infrastructure/, /docs/APL/, /docs/Core-Concepts/, /docs/Tools-&-APIs/). This improves navigation and prevents broken links throughout the docs.

--- a/content/docs/Tools-&-APIs/arch-cli-reference.mdx
+++ b/content/docs/Tools-&-APIs/arch-cli-reference.mdx
@@ -571,7 +571,7 @@ arch-cli token transfer \
 ## Next Steps
 
 <Cards>
-  <Card title="Quick Start Guide" href="/docs/quick-start/quick-start">
+  <Card title="Quick Start Guide" href="/docs/Quick-Start/quick-start">
     Get started with Arch Network development
   </Card>
   <Card title="Program Development" href="/docs/development/writing-your-first-program">
@@ -580,7 +580,7 @@ arch-cli token transfer \
   <Card title="Token Creation" href="/docs/development/how-to-create-a-fungible-token">
     Create your first token
   </Card>
-  <Card title="RPC API Reference" href="/docs/rpc/api-reference">
+  <Card title="RPC API Reference" href="/docs/tools-apis/api-reference">
     Use the RPC API directly
   </Card>
 </Cards>
