--- a/content/docs/Tools-&-APIs/sdk.mdx
+++ b/content/docs/Tools-&-APIs/sdk.mdx
@@ -101,16 +101,16 @@ async fn main() -> Result<(), Box<dyn std::error::Error>> {
 ## Documentation Structure
 
 ### TypeScript SDK Documentation
-- [Getting Started with TypeScript SDK](/docs/sdk/typescript/getting-started)
-- [TypeScript API Reference](/docs/sdk/typescript/api-reference)
-- [TypeScript Examples](/docs/sdk/typescript/examples)
-- [Web3 Integration](/docs/sdk/typescript/web3-integration)
+- [Getting Started with TypeScript SDK](/docs/tools-apis/sdk)
+- [TypeScript API Reference](/docs/tools-apis/sdk)
+- [TypeScript Examples](/docs/tools-apis/sdk)
+- [Web3 Integration](/docs/tools-apis/sdk)
 
 ### Rust SDK Documentation
-- [Getting Started with Rust SDK](/docs/sdk/rust/getting-started)
-- [Rust API Reference](/docs/sdk/rust/api-reference)
-- [Rust Examples](/docs/sdk/rust/examples)
-- [Program Development](/docs/sdk/rust/program-development)
+- [Getting Started with Rust SDK](/docs/tools-apis/sdk)
+- [Rust API Reference](/docs/tools-apis/sdk)
+- [Rust Examples](/docs/tools-apis/sdk)
+- [Program Development](/docs/tools-apis/sdk)
 
 ## Feature Comparison
 
@@ -263,26 +263,26 @@ let transaction = Transaction::new()
 ### TypeScript SDK Support
 - **GitHub Issues**: [arch-typescript-sdk/issues](https://github.com/saturnbtc/arch-typescript-sdk/issues)
 - **Discord**: #typescript-sdk channel
-- **Documentation**: [TypeScript SDK Docs](/docs/sdk/typescript)
+- **Documentation**: [TypeScript SDK Docs](/docs/tools-apis/sdk)
 
 ### Rust SDK Support
 - **GitHub Issues**: [arch-network/issues](https://github.com/Arch-Network/arch-network/issues)
 - **Discord**: #rust-sdk channel
-- **Documentation**: [Rust SDK Docs](/docs/sdk/rust)
+- **Documentation**: [Rust SDK Docs](/docs/tools-apis/sdk)
 
 ## Next Steps
 
 <Cards>
-  <Card title="TypeScript SDK" href="/docs/sdk/typescript/getting-started">
+  <Card title="TypeScript SDK" href="/docs/tools-apis/sdk">
     Get started with the TypeScript SDK
   </Card>
-  <Card title="Rust SDK" href="/docs/sdk/rust/getting-started">
+  <Card title="Rust SDK" href="/docs/tools-apis/sdk">
     Get started with the Rust SDK
   </Card>
   <Card title="Program Development" href="/docs/development/writing-your-first-program">
     Learn to write Arch programs
   </Card>
-  <Card title="Examples" href="/docs/sdk/typescript/examples">
+  <Card title="Examples" href="/docs/tools-apis/sdk">
     Explore SDK examples
   </Card>
 </Cards>
