--- a/content/docs/apl/associated-token-account.mdx
+++ b/content/docs/apl/associated-token-account.mdx
@@ -491,7 +491,7 @@ async fn safe_create_ata(
   <Card title="Token Creation Guide" href="/docs/development/how-to-create-a-fungible-token">
     Create your first token with ATA
   </Card>
-  <Card title="SDK Reference" href="/docs/sdk/sdk">
+  <Card title="SDK Reference" href="/docs/tools-apis/sdk">
     Use SDKs for easier integration
   </Card>
   <Card title="CLI Reference" href="/docs/tools-apis/arch-cli-reference">
