--- a/content/docs/apl/introduction.mdx
+++ b/content/docs/apl/introduction.mdx
@@ -98,10 +98,10 @@ Stay connected with the community to learn about new developments and opportunit
 ## Program Overview
 
 <Cards>
-  <Card title="Token Program" href="/docs/apl/token-program">
+  <Card title="Token Program" href="/docs/APL/token-program">
     Create and manage fungible tokens with full feature support
   </Card>
-  <Card title="Associated Token Account" href="/docs/apl/associated-token-account">
+  <Card title="Associated Token Account" href="/docs/APL/associated-token-account">
     Standardized token account creation and management
   </Card>
 </Cards>
