--- a/content/docs/apl/token-program.mdx
+++ b/content/docs/apl/token-program.mdx
@@ -580,13 +580,13 @@ arch-cli token transfer \
 ## Next Steps
 
 <Cards>
-  <Card title="Associated Token Account" href="/docs/apl/associated-token-account">
+  <Card title="Associated Token Account" href="/docs/APL/associated-token-account">
     Learn about associated token accounts
   </Card>
   <Card title="Token Guide" href="/docs/development/how-to-create-a-fungible-token">
     Complete guide to creating tokens
   </Card>
-  <Card title="SDK Reference" href="/docs/sdk/sdk">
+  <Card title="SDK Reference" href="/docs/tools-apis/sdk">
     Learn to use the SDKs
   </Card>
   <Card title="Examples" href="https://github.com/Arch-Network/arch-examples" external>
