--- a/content/docs/defi-applications/how-to-build-lending-protocol.mdx
+++ b/content/docs/defi-applications/how-to-build-lending-protocol.mdx
@@ -8,8 +8,8 @@ This guide walks through building a lending protocol for Bitcoin-based assets (B
 ## Prerequisites
 
 Before starting, ensure you have:
-- Completed the [environment setup](/docs/quick-start/requirements)
-- A basic understanding of [Bitcoin Integration](/docs/core-concepts/bitcoin-integration)
+- Completed the [environment setup](/docs/Quick-Start/requirements)
+- A basic understanding of [Bitcoin Integration](/docs/Core-Concepts/bitcoin-integration)
 - Familiarity with Rust programming language
 - Your development environment ready with the Arch CLI installed
 
@@ -680,10 +680,10 @@ arch-cli program call <PROGRAM_ID> \
   <Card title="Oracle Program Guide" href="/docs/development/how-to-write-oracle-program">
     Learn to build price oracles for your lending protocol
   </Card>
-  <Card title="Runes Swap Guide" href="/docs/defi-applications/how-to-build-runes-swap">
+  <Card title="Runes Swap Guide" href="/docs/DeFi-Applications/how-to-build-runes-swap">
     Build a token swap protocol
   </Card>
-  <Card title="APL Token Program" href="/docs/apl/token-program">
+  <Card title="APL Token Program" href="/docs/APL/token-program">
     Use APL tokens in your lending protocol
   </Card>
   <Card title="Arch Examples" href="https://github.com/Arch-Network/arch-examples" external>
@@ -697,7 +697,7 @@ arch-cli program call <PROGRAM_ID> \
   <Card title="Arch Examples Repository" href="https://github.com/Arch-Network/arch-examples" external>
     Complete lending protocol implementation
   </Card>
-  <Card title="Bitcoin Integration" href="/docs/core-concepts/bitcoin-integration">
+  <Card title="Bitcoin Integration" href="/docs/Core-Concepts/bitcoin-integration">
     Understand Bitcoin integration in Arch
   </Card>
   <Card title="Program Development" href="/docs/development/writing-your-first-program">
