--- a/content/docs/defi-applications/how-to-build-runes-swap.mdx
+++ b/content/docs/defi-applications/how-to-build-runes-swap.mdx
@@ -8,8 +8,8 @@ Welcome to this hands-on tutorial! Today, we're going to build a decentralized a
 ## Class Prerequisites
 
 Before we dive in, please ensure you have:
-- Completed the [environment setup](/docs/quick-start/requirements)
-- A basic understanding of [Bitcoin Integration](/docs/core-concepts/bitcoin-integration)
+- Completed the [environment setup](/docs/Quick-Start/requirements)
+- A basic understanding of [Bitcoin Integration](/docs/Core-Concepts/bitcoin-integration)
 - Familiarity with Rust programming language
 - Your development environment ready with the Arch Network CLI installed
 
@@ -602,13 +602,13 @@ arch-cli account show ~/offer_account.key
 ## Next Steps
 
 <Cards>
-  <Card title="Lending Protocol Guide" href="/docs/defi-applications/how-to-build-lending-protocol">
+  <Card title="Lending Protocol Guide" href="/docs/DeFi-Applications/how-to-build-lending-protocol">
     Build a lending protocol using your swap knowledge
   </Card>
   <Card title="Oracle Integration" href="/docs/development/how-to-write-oracle-program">
     Add price oracles to your swap
   </Card>
-  <Card title="APL Token Program" href="/docs/apl/token-program">
+  <Card title="APL Token Program" href="/docs/APL/token-program">
     Learn about the built-in token program
   </Card>
   <Card title="Arch Examples" href="https://github.com/Arch-Network/arch-examples" external>
@@ -622,7 +622,7 @@ arch-cli account show ~/offer_account.key
   <Card title="Arch Examples Repository" href="https://github.com/Arch-Network/arch-examples" external>
     Complete swap implementation examples
   </Card>
-  <Card title="Bitcoin Integration" href="/docs/core-concepts/bitcoin-integration">
+  <Card title="Bitcoin Integration" href="/docs/Core-Concepts/bitcoin-integration">
     Understand Bitcoin integration in Arch
   </Card>
   <Card title="Program Development" href="/docs/development/writing-your-first-program">
