--- a/content/docs/development/how-to-create-a-fungible-token.mdx
+++ b/content/docs/development/how-to-create-a-fungible-token.mdx
@@ -457,7 +457,7 @@ async fn main() -> Result<(), Box<dyn std::error::Error>> {
   <Card title="Lending Protocol" href="/docs/defi-applications/how-to-build-lending-protocol">
     Create a lending protocol
   </Card>
-  <Card title="APL Documentation" href="/docs/apl/token-program">
+  <Card title="APL Documentation" href="/docs/APL/token-program">
     Deep dive into the APL Token Program
   </Card>
 </Cards>
@@ -465,10 +465,10 @@ async fn main() -> Result<(), Box<dyn std::error::Error>> {
 ## Resources
 
 <Cards>
-  <Card title="APL Token Program" href="/docs/apl/token-program">
+  <Card title="APL Token Program" href="/docs/APL/token-program">
     Complete APL Token Program documentation
   </Card>
-  <Card title="SDK Reference" href="/docs/sdk/sdk">
+  <Card title="SDK Reference" href="/docs/tools-apis/sdk">
     Client SDK documentation
   </Card>
   <Card title="CLI Reference" href="/docs/tools-apis/arch-cli-reference">
