--- a/content/docs/development/how-to-write-oracle-program.mdx
+++ b/content/docs/development/how-to-write-oracle-program.mdx
@@ -539,7 +539,7 @@ arch-cli account show ~/oracle_state.key
   <Card title="Program Development Guide" href="/docs/development/writing-your-first-program">
     Learn the basics of Arch program development
   </Card>
-  <Card title="Account Management" href="/docs/program/accounts">
+  <Card title="Account Management" href="/docs/development/writing-your-first-program">
     Understand account management in Arch programs
   </Card>
   <Card title="Community Discord" href="https://discord.gg/archnetwork" external>
