--- a/content/docs/development/writing-your-first-program.mdx
+++ b/content/docs/development/writing-your-first-program.mdx
@@ -21,8 +21,8 @@ Before starting, ensure you have:
 - **Rust 1.70+** and Cargo installed ([Install Rust](https://rustup.rs/))
 - **Solana CLI 2.0+** - [Install Guide](https://docs.solana.com/cli/install-solana-cli-tools)
 - **Arch Network CLI** - [Download Latest](https://github.com/Arch-Network/arch-node/releases/latest)
-- **Running validator** (see [Validator Setup Guide](/docs/setup-infrastructure/bitcoin-and-titan-setup))
-- **Basic Rust knowledge** and understanding of [Arch concepts](/docs/setup-infrastructure/architecture)
+- **Running validator** (see [Validator Setup Guide](/docs/Setup-Infrastructure/bitcoin-and-titan-setup))
+- **Basic Rust knowledge** and understanding of [Arch concepts](/docs/Setup-Infrastructure/architecture)
 
 ## Step 1: Project Setup
 
@@ -806,10 +806,10 @@ Congratulations! You've successfully created your first Arch program. Here's wha
   <Card title="Build an Oracle Program" href="/docs/development/how-to-write-oracle-program">
     Create a price oracle for external data
   </Card>
-  <Card title="Advanced Testing" href="/docs/guides/testing-guide">
+  <Card title="Advanced Testing" href="/docs/development/writing-your-first-program">
     Learn comprehensive testing strategies
   </Card>
-  <Card title="Program Architecture" href="/docs/guides/understanding-arch-programs">
+  <Card title="Program Architecture" href="/docs/development/writing-your-first-program">
     Deep dive into Arch program concepts
   </Card>
 </Cards>
@@ -825,7 +825,7 @@ Congratulations! You've successfully created your first Arch program. Here's wha
 
 ## Resources
 
-- [Arch Program Library](/docs/apl/introduction) - Pre-built programs and utilities
-- [SDK Documentation](/docs/sdk/sdk) - Client libraries and tools
-- [API Reference](/docs/rpc/rpc) - Complete API documentation
+- [Arch Program Library](/docs/APL/introduction) - Pre-built programs and utilities
+- [SDK Documentation](/docs/tools-apis/sdk) - Client libraries and tools
+- [API Reference](/docs/tools-apis/api-reference) - Complete API documentation
 - [Community Discord](https://discord.gg/archnetwork) - Get help and share your projects
