--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -14,10 +14,10 @@ Arch Network is a computation environment that enhances Bitcoin's capabilities b
 ## Choose Your Path 👋
 
 <Cards>
-  <Card title="🚀 Deploy First" href="/docs/quick-start/quick-start">
+  <Card title="🚀 Deploy First" href="/docs/Quick-Start/quick-start">
     Get your first smart contract running on Arch Network as quickly as possible
   </Card>
-  <Card title="🏗️ Run a Validator" href="/docs/setup-infrastructure/bitcoin-and-titan-setup">
+  <Card title="🏗️ Run a Validator" href="/docs/Setup-Infrastructure/bitcoin-and-titan-setup">
     Set up and run your own validator node on the Arch Network
   </Card>
 </Cards>
@@ -25,10 +25,10 @@ Arch Network is a computation environment that enhances Bitcoin's capabilities b
 ### Network Options
 
 <Cards>
-  <Card title="🔧 Regtest" href="/docs/quick-start/quick-start">
+  <Card title="🔧 Regtest" href="/docs/Quick-Start/quick-start">
     Local development environment with instant block confirmation. Perfect for development and testing.
   </Card>
-  <Card title="🧪 Testnet" href="/docs/quick-start/quick-start">
+  <Card title="🧪 Testnet" href="/docs/Quick-Start/quick-start">
     Test network with real Bitcoin testnet integration. For testing in a live environment.
   </Card>
 </Cards>
@@ -36,19 +36,19 @@ Arch Network is a computation environment that enhances Bitcoin's capabilities b
 ## Key Features
 
 <Cards>
-  <Card title="Bitcoin-Native" href="/docs/core-concepts/bitcoin-integration">
+  <Card title="Bitcoin-Native" href="/docs/Core-Concepts/bitcoin-integration">
     Direct integration with Bitcoin through UTXO management
   </Card>
-  <Card title="Computation Environment" href="/docs/setup-infrastructure/architecture">
+  <Card title="Computation Environment" href="/docs/Setup-Infrastructure/architecture">
     Execute complex programs within the Arch VM
   </Card>
   <Card title="Program Development" href="/docs/development/writing-your-first-program">
     Write programs in Rust to interact with Bitcoin UTXOs
   </Card>
-  <Card title="Security" href="/docs/setup-infrastructure/network-architecture">
+  <Card title="Security" href="/docs/Setup-Infrastructure/network-architecture">
     Leverages Bitcoin's proven security guarantees through multi-signature validation
   </Card>
-  <Card title="Developer Tools" href="/docs/tools-apis/arch-cli-reference">
+  <Card title="Developer Tools" href="/docs/Tools-&-APIs/arch-cli-reference">
     Complete development environment with CLI tools and explorer
   </Card>
 </Cards>
@@ -57,7 +57,7 @@ Arch Network is a computation environment that enhances Bitcoin's capabilities b
 
 Before you begin, ensure you have:
 
-- Node.js v19+ ([installation guide](/docs/quick-start/requirements))
+- Node.js v19+ ([installation guide](/docs/Quick-Start/requirements))
 - Rust (latest stable)
 - Docker for local development
 - Basic understanding of [Bitcoin Integration](/docs/core-concepts/bitcoin-integration)
@@ -69,17 +69,17 @@ Before you begin, ensure you have:
 Arch Network consists of three main components:
 
 1. **Network Layer**
-   - [Network Architecture](/docs/setup-infrastructure/network-architecture)
-     - [Bootnode](/docs/setup-infrastructure/network-architecture): Network discovery and peer management
-     - [Leader Node](/docs/setup-infrastructure/network-architecture): Transaction coordination
-     - [Validator Nodes](/docs/setup-infrastructure/network-architecture): Program execution
+   - [Network Architecture](/docs/Setup-Infrastructure/network-architecture)
+     - [Bootnode](/docs/Setup-Infrastructure/network-architecture): Network discovery and peer management
+     - [Leader Node](/docs/Setup-Infrastructure/network-architecture): Transaction coordination
+     - [Validator Nodes](/docs/Setup-Infrastructure/network-architecture): Program execution
 
 2. **Bitcoin Integration**
-   - [UTXO Management](/docs/core-concepts/bitcoin-integration)
+   - [UTXO Management](/docs/Core-Concepts/bitcoin-integration)
      - Transaction tracking
      - State anchoring
      - Ownership validation
-   - [RPC Integration](/docs/core-concepts/bitcoin-integration)
+   - [RPC Integration](/docs/Core-Concepts/bitcoin-integration)
      - Bitcoin node communication
      - Transaction submission
      - Network synchronization
@@ -89,7 +89,7 @@ Arch Network consists of three main components:
      - [Instructions](/docs/development/writing-your-first-program)
      - [Accounts](/docs/development/writing-your-first-program)
      - [System Calls](/docs/development/writing-your-first-program)
-   - [Transaction Processing](/docs/tools-apis/sdk)
+   - [Transaction Processing](/docs/Tools-&-APIs/sdk)
      - Message validation
      - State updates
      - UTXO management
@@ -97,7 +97,7 @@ Arch Network consists of three main components:
 ## 🛠 Reference Documentation
 
 <Cards>
-  <Card title="API Reference" href="/docs/tools-apis/api-reference">
+  <Card title="API Reference" href="/docs/Tools-&-APIs/api-reference">
     RPC API Reference and Transaction Processing
   </Card>
   <Card title="Program Examples" href="/docs/development/writing-your-first-program">
@@ -114,13 +114,13 @@ Arch Network consists of three main components:
   <Card title="Join Discord" href="https://discord.gg/archnetwork" external>
     Get support from the community
   </Card>
-  <Card title="Architecture Overview" href="/docs/setup-infrastructure/architecture">
+  <Card title="Architecture Overview" href="/docs/Setup-Infrastructure/architecture">
     Read the Architecture Overview
   </Card>
   <Card title="Example Programs" href="/docs/development/writing-your-first-program">
     View Example Programs
   </Card>
-  <Card title="API Reference" href="/docs/tools-apis/api-reference">
+  <Card title="API Reference" href="/docs/Tools-&-APIs/api-reference">
     Check the API Reference
   </Card>
 </Cards>
