--- a/content/docs/Tools-&-APIs/api-reference.mdx
+++ b/content/docs/Tools-&-APIs/api-reference.mdx
@@ -12,7 +12,7 @@ The Arch Network provides a comprehensive JSON-RPC API for interacting with vali
 - Manage validator operations
 
 :::note
-**RPC Method Availability**: For a complete list of which RPC methods are available in the `validator` vs `local_validator` crates, along with their correct parameter formats, see the [RPC Method Availability Guide](/docs/rpc/rpc-method-availability).
+**RPC Method Availability**: For a complete list of which RPC methods are available in the `validator` vs `local_validator` crates, along with their correct parameter formats, see the RPC section below.
 :::
 
 ## API Endpoints
@@ -348,7 +348,7 @@ async fn main() -> Result<(), Box<dyn std::error::Error>> {
 ## Next Steps
 
 <Cards>
-  <Card title="RPC Method Availability" href="/docs/rpc/rpc-method-availability">
+  <Card title="SDK Reference" href="/docs/tools-apis/sdk">
     Check which methods are available in different environments
   </Card>
   <Card title="SDK Reference" href="/docs/sdk/sdk">
