Update internal documentation links to lowercase paths
Standardized internal documentation links to use lowercase and hyphenated paths for consistency and to prevent broken links. Removed duplicate or outdated resource references and updated card components across multiple documentation files.

--- a/content/docs/apl/associated-token-account.mdx
+++ b/content/docs/apl/associated-token-account.mdx
@@ -485,7 +485,7 @@ async fn safe_create_ata(
 ## Next Steps
 
 <Cards>
-  <Card title="Token Program" href="/docs/apl/token-program">
+  <Card title="Token Program" href="/docs/APL/token-program">
     Learn about the APL Token Program
   </Card>
   <Card title="Token Creation Guide" href="/docs/development/how-to-create-a-fungible-token">
@@ -502,10 +502,8 @@ async fn safe_create_ata(
 ## Resources
 
 <Cards>
-  <Card title="APL Source Code" href="https://github.com/Arch-Network/apl" external>
-    View the complete source code
-  </Card>
-  <Card title="Token Program" href="/docs/apl/token-program">
+  
+  <Card title="Token Program" href="/docs/APL/token-program">
     Complete APL Token Program reference
   </Card>
   <Card title="Arch Examples" href="https://github.com/Arch-Network/arch-examples" external>
