Update docs paths and fix references
Renamed documentation files and updated internal links and references to use consistent casing and directory names (e.g., Quick-Start, Setup-Infrastructure, Core-Concepts). Also fixed note block syntax in API and CLI reference docs. Updated meta.json to reflect new paths and titles. No functional code changes.

--- a/content/docs/APIs and Tools/arch-cli-reference.mdx
+++ b/content/docs/APIs and Tools/arch-cli-reference.mdx
@@ -36,9 +36,9 @@ arch-cli --help
 arch-cli --version
 ```
 
-:::note
+::::note
 All user-facing identifiers in arch-cli (addresses, public keys, transaction IDs, block hashes) are base58.
-:::
+::::
 
 **Network Modes:**
 - `devnet`: Development network (default)
