--- a/content/docs/APIs and Tools/api-reference.mdx
+++ b/content/docs/APIs and Tools/api-reference.mdx
@@ -11,9 +11,9 @@ The Arch Network provides a comprehensive JSON-RPC API for interacting with vali
 - Monitor network state and readiness
 - Manage validator operations
 
-:::note
+::::note
 **RPC Method Availability**: For a complete list of which RPC methods are available in the `validator` vs `local_validator` crates, along with their correct parameter formats, see the RPC section below.
-:::
+::::
 
 ## API Endpoints
 
