Normalize mixed-case doc links to lowercase across site

--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -14,10 +14,10 @@ Arch Network is a computation environment that enhances Bitcoin's capabilities b
 ## Choose Your Path 👋
 
 <Cards>
-  <Card title="🚀 Deploy First" href="/docs/Quick-Start/quick-start">
+  <Card title="🚀 Deploy First" href="/docs/quick-start/quick-start">
     Get your first smart contract running on Arch Network as quickly as possible
   </Card>
-  <Card title="🏗️ Run a Validator" href="/docs/Setup-Infrastructure/bitcoin-and-titan-setup">
+  <Card title="🏗️ Run a Validator" href="/docs/setup-infrastructure/bitcoin-and-titan-setup">
     Set up and run your own validator node on the Arch Network
   </Card>
 </Cards>
@@ -25,10 +25,10 @@ Arch Network is a computation environment that enhances Bitcoin's capabilities b
 ### Network Options
 
 <Cards>
-  <Card title="🔧 Regtest" href="/docs/Quick-Start/quick-start">
+  <Card title="🔧 Regtest" href="/docs/quick-start/quick-start">
     Local development environment with instant block confirmation. Perfect for development and testing.
   </Card>
-  <Card title="🧪 Testnet" href="/docs/Quick-Start/quick-start">
+  <Card title="🧪 Testnet" href="/docs/quick-start/quick-start">
     Test network with real Bitcoin testnet integration. For testing in a live environment.
   </Card>
 </Cards>
@@ -57,7 +57,7 @@ Arch Network is a computation environment that enhances Bitcoin's capabilities b
 
 Before you begin, ensure you have:
 
-- Node.js v19+ ([installation guide](/docs/Quick-Start/requirements))
+- Node.js v19+ ([installation guide](/docs/quick-start/requirements))
 - Rust (latest stable)
 - Docker for local development
 - Basic understanding of [Bitcoin Integration](/docs/core-concepts/bitcoin-integration)
@@ -103,7 +103,7 @@ Arch Network consists of three main components:
   <Card title="Program Examples" href="/docs/development/writing-your-first-program">
     Oracle Program and Fungible Token examples
   </Card>
-  <Card title="System Program" href="/docs/APL/introduction">
+  <Card title="System Program" href="/docs/apl/introduction">
     Account Creation and Program Deployment
   </Card>
 </Cards>
@@ -125,6 +125,6 @@ Arch Network consists of three main components:
   </Card>
 </Cards>
 
-:::tip
+::::tip
 💡 **Pro Tip:** Use the search function (press 's' or '/' on your keyboard) to quickly find what you're looking for in the documentation.
-:::
+::::
