Add API, CLI, and SDK reference docs
Introduces new documentation pages for the Arch Network RPC API, CLI commands, and SDK usage. Updates quick start and oracle program docs to use new admonition components. Refactors Next.js config and updates dependencies for rehype-components and remark-directive support. Adds new SVG assets and font files for improved UI.

--- a/content/docs/development/how-to-write-oracle-program.mdx
+++ b/content/docs/development/how-to-write-oracle-program.mdx
@@ -120,9 +120,9 @@ cd oracle
 cargo init --lib
 ```
 
-:::note
+<Tip>
 The new CLI does not currently have a project creation command. We'll manually set up our project structure.
-:::
+</Tip>
 
 You'll need to create and edit the following files:
 - `Cargo.toml` - Add dependencies for your oracle program
