--- a/content/docs/quick-start/quick-start.mdx
+++ b/content/docs/quick-start/quick-start.mdx
@@ -15,9 +15,9 @@ Before starting, ensure you have the following tools installed:
 - **Arch Network CLI** - Download from [Arch Network Releases](https://github.com/Arch-Network/arch-node/releases/latest)
 - **Docker** - Required for local development - [Install Docker](https://docs.docker.com/engine/install/)
 
-:::warning
+<Warning>
 **Important**: Arch Network now requires Solana CLI 2.x. Please ensure you have version 2.2.14 or later installed.
-:::
+</Warning>
 
 Verify your installation:
 
@@ -29,9 +29,9 @@ arch-cli --version
 docker --version
 ```
 
-:::tip
+<Tip>
 If you encounter any issues during installation, join our [Discord](https://discord.gg/archnetwork) for support.
-:::
+</Tip>
 
 ## 🚀 Quick Start Project
 
